# Perfectory

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Readme  auto_run.py  run.sh
Memos/: Memo  Memo2  Memos
include/: conveyor.h  player.hpp  utils.h
src/: main.c  main.cpp  utils.c  utils.cpp
src/block/: conveyor.c  conveyor.cpp
src/block/test/: conveyor_test.cpp
